--- a/ASSIGNMENT1.ipynb
+++ b/ASSIGNMENT1.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d1e882a",
+   "id": "f1768082",
    "metadata": {},
    "source": [
     "#2. What is the difference between string and variable? \n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c90ae4e5",
+   "id": "a10163d9",
    "metadata": {},
    "source": [
     "#3Describe three different data types.\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63f9bf7d",
+   "id": "c609563a",
    "metadata": {},
    "source": [
     "#4. What is an expression made up of? What do all expressions do?\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e96e8be",
+   "id": "cd5255fd",
    "metadata": {},
    "source": [
     "#5 This assignment statements, like spam = 10. What is the difference between an expression and a statement?\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a12b68da",
+   "id": "1c4c943b",
    "metadata": {},
    "source": [
     "#6. After running the following code, what does the variable bacon contain?\n",
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2742d667",
+   "id": "f63b1801",
    "metadata": {},
    "source": [
     "#7. What should the values of the following two terms be?\n",
@@ -80,28 +80,28 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3b57125",
+   "id": "1c7c6053",
    "metadata": {},
    "source": [
-    "8 Why is eggs a valid variable name while 100 is invalid?\n",
+    "#8 Why is eggs a valid variable name while 100 is invalid?\n",
     "eggs is a string and 100 is a integer,we can give integer to a variable.A mix of string and integer,starting with string is possible."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "14d9d09e",
+   "id": "11075407",
    "metadata": {},
    "source": [
-    "9. What three functions can be used to get the integer, floating-point number, or string version of a value?\n",
+    "#9. What three functions can be used to get the integer, floating-point number, or string version of a value?\n",
     "int(),float(),str() are the respective functions to get those"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d63f46e2",
+   "id": "da8ca1ab",
    "metadata": {},
    "source": [
-    "10. Why does this expression cause an error? How can you fix it?\n",
+    "#10. Why does this expression cause an error? How can you fix it?\n",
     "'I have eaten ' + 99 + ' burritos.'\n",
     "output:: 'I have eaten and burritos are strings..it cannot be concatenated with integer 99.We can do it after type casting"
    ]
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d31dd69e",
+   "id": "56a54858",
    "metadata": {},
    "outputs": [],
    "source": []
