--- a/ASSIGNMENT1.ipynb
+++ b/ASSIGNMENT1.ipynb
@@ -6,27 +6,28 @@
    "metadata": {},
    "source": [
     "#1 In the below elements which of them are values or an expression? \n",
-    "eg:- values can be\n",
-    "integer or string and expressions will be mathematical operators.\n",
-    " EXPRESSION *   /  + -\n",
-    " VALUE 'hello',-87.8,6"
+    "eg:- \n",
+    "values can be integer or string\n",
+    "Here xpressions will be mathematical operators.\n",
+    " EXPRESSION  *   /  + -\n",
+    " VALUE      'hello',-87.8,6"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f1768082",
+   "id": "07ab2079",
    "metadata": {},
    "source": [
     "#2. What is the difference between string and variable? \n",
     "string can be stored in variable\n",
-    "example of string==\"allen\",'ineuron\n",
+    "example of string is \"allen\" and \"ineuron\"\n",
     "string is stored using single or double  quotes'\n",
     "variable is the place where values and datas can be stored"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a10163d9",
+   "id": "073216ad",
    "metadata": {},
    "source": [
     "#3Describe three different data types.\n",
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c609563a",
+   "id": "65d19222",
    "metadata": {},
    "source": [
     "#4. What is an expression made up of? What do all expressions do?\n",
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd5255fd",
+   "id": "ba725a00",
    "metadata": {},
    "source": [
     "#5 This assignment statements, like spam = 10. What is the difference between an expression and a statement?\n",
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c4c943b",
+   "id": "b2498cad",
    "metadata": {},
    "source": [
     "#6. After running the following code, what does the variable bacon contain?\n",
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f63b1801",
+   "id": "660c34c8",
    "metadata": {},
    "source": [
     "#7. What should the values of the following two terms be?\n",
@@ -80,16 +81,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c7c6053",
+   "id": "9dac5575",
    "metadata": {},
    "source": [
     "#8 Why is eggs a valid variable name while 100 is invalid?\n",
-    "eggs is a string and 100 is a integer,we can give integer to a variable.A mix of string and integer,starting with string is possible."
+    "eggs is a string and 100 is a integer,we can give string to a variable.A mix of string and integer,starting with string is possible."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "11075407",
+   "id": "2c853f79",
    "metadata": {},
    "source": [
     "#9. What three functions can be used to get the integer, floating-point number, or string version of a value?\n",
@@ -98,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da8ca1ab",
+   "id": "54dce5ba",
    "metadata": {},
    "source": [
     "#10. Why does this expression cause an error? How can you fix it?\n",
@@ -109,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56a54858",
+   "id": "16be6a2b",
    "metadata": {},
    "outputs": [],
    "source": []
