--- a/ASSIGNMENT1.ipynb
+++ b/ASSIGNMENT1.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "#1 In the below elements which of them are values or an expression? \n",
     "eg:- \n",
-    "values can be integer or string\n",
+    "values can be integer or string.\n",
     "Here xpressions will be mathematical operators.\n",
     " EXPRESSION  *   /  + -\n",
     " VALUE      'hello',-87.8,6"
@@ -15,41 +15,41 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07ab2079",
+   "id": "3ed41f9d",
    "metadata": {},
    "source": [
     "#2. What is the difference between string and variable? \n",
-    "string can be stored in variable\n",
-    "example of string is \"allen\" and \"ineuron\"\n",
-    "string is stored using single or double  quotes'\n",
+    "string can be stored in variable.\n",
+    "Example of string is \"allen\" and \"ineuron\".\n",
+    "String is stored using single or double  quotes'.\n",
     "variable is the place where values and datas can be stored"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "073216ad",
+   "id": "aa5d6b2e",
    "metadata": {},
    "source": [
     "#3Describe three different data types.\n",
-    "bool:either true or false comes under boolean\n",
-    "int:integer values comes under this\n",
-    "float:floating values real numbers comes under this,ie values with decimal points"
+    "bool:either true or false comes under boolean.\n",
+    "int:integer values comes under this.\n",
+    "float:floating values real numbers comes under this,ie values with decimal points."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "65d19222",
+   "id": "bb73d5ca",
    "metadata": {},
    "source": [
     "#4. What is an expression made up of? What do all expressions do?\n",
-    "Expressions consist of operators(addition,subtraction,division,multiplication,etc),variable and values\n",
-    "eg:b=20+70\n",
+    "Expressions consist of operators(addition,subtraction,division,multiplication,etc),variable and values.\n",
+    "eg:b=20+70.\n",
     "    Also we can say expressons aer something which are evaluated to produce a value\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ba725a00",
+   "id": "b2dc2947",
    "metadata": {},
    "source": [
     "#5 This assignment statements, like spam = 10. What is the difference between an expression and a statement?\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2498cad",
+   "id": "01d1a9e0",
    "metadata": {},
    "source": [
     "#6. After running the following code, what does the variable bacon contain?\n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "660c34c8",
+   "id": "75b6ea31",
    "metadata": {},
    "source": [
     "#7. What should the values of the following two terms be?\n",
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9dac5575",
+   "id": "b4286842",
    "metadata": {},
    "source": [
     "#8 Why is eggs a valid variable name while 100 is invalid?\n",
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c853f79",
+   "id": "d1e488ee",
    "metadata": {},
    "source": [
     "#9. What three functions can be used to get the integer, floating-point number, or string version of a value?\n",
@@ -99,18 +99,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54dce5ba",
+   "id": "89be60f4",
    "metadata": {},
    "source": [
     "#10. Why does this expression cause an error? How can you fix it?\n",
-    "'I have eaten ' + 99 + ' burritos.'\n",
+    "'I have eaten ' + 99 + ' burritos.'.\n",
     "output:: 'I have eaten and burritos are strings..it cannot be concatenated with integer 99.We can do it after type casting"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16be6a2b",
+   "id": "80d809be",
    "metadata": {},
    "outputs": [],
    "source": []
