--- a/Assignment 2.ipynb
+++ b/Assignment 2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "196a6f57",
+   "id": "86c361d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87dd1736",
+   "id": "9b0d7d63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2645b3a0",
+   "id": "1fc607d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,11 +52,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "721f7fb0",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1858763",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "4. What are the values of the following expressions?\n",
+    "##4. What are the values of the following expressions?\n",
     "(5 > 4) and (3 == 5)####True##\n",
     "not (5 > 4)#############False##\n",
     "(5 > 4) or (3 == 5)#####True##\n",
@@ -68,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "be79e681",
+   "id": "6e5770c2",
    "metadata": {},
    "outputs": [],
    "source": [
